# harness-study

./: AGENTS.md  App.tsx  README.md  app.json  log.md  package-lock.json  package.json  pnpm-lock.yaml  progress.md  scratch_delete.js
.agents/: AGENTS.md  checklist.yml
.agents/apis/: API_generate_image.md  API_get_history.md
.agents/designs/: DESIGN_pet_image_service.md
.agents/requirements/: REQ_pet_image_service.md
.antigravity/: config.json  system.md
.antigravity/agents/: coder.md  planner.md  reviewer.md  tester.md
.antigravity/hooks/: get_current_task.sh  init.sh  update_current_task.sh
.antigravity/templates/: api_spec_template.md  design_spec_template.md  progress_template.md  requirements_template.md
__tests__/: game_physics.test.ts
ai/: .gitignore  main.py  pyproject.toml
ai/tests/: conftest.py  test_generate_image.py  test_get_history.py
android/: gradle.properties  settings.gradle
android/app/: build.gradle
docs/harness-engineering/: README.md  design.md
frontend/: jest.config.ts  jest.setup.ts  package-lock.json  package.json
frontend/__tests__/: HistoryGallery.test.tsx  ImageDownload.test.tsx  ImageGenerationIntegration.test.tsx  ImageGenerator.test.tsx  KeywordPanel.test.tsx  NavigationBar.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/mocks/: handlers.ts  server.ts
ios/: Podfile
ios/HarnessStudy/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/HarnessStudy.xcodeproj/: project.pbxproj
ios/HarnessStudy.xcworkspace/: contents.xcworkspacedata
src/assets/: dinoHtml.ts
(+38 files in other folders)
